<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="web_client_id" translatable="false">827872142698–2e3mj80372tqtjrad9den77o0j1bhq19.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1008423109609472</string>
    <string name="facebook_application_id" translatable="false">1008423109609472</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1008423109609472</string>

    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="call_cap">CALL</string>
    <string name="like_cap">LIKE</string>
    <string name="website_cap">WEBSITE</string>
    <string name="bottom_nav_map_view">Map View</string>
    <string name="bottom_nav_list_view">List View</string>
    <string name="bottom_nav_workmates">Workmates</string>
    <string name="toolbar_menu_search">Search</string>
    <string name="toolbar_menu_sort">Sort</string>
    <string name="drawer_menu_my_lunch_cap">MY LUNCH</string>
    <string name="drawer_menu_settings_cap">SETTINGS</string>
    <string name="drawer_menu_logout_cap">LOGOUT</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="toolbar_title_available_workmates">Workmates</string>
    <string name="toolbar_title_i_am_hungry">I\'m Hungry!</string>
    <string name="permission_message">You need to accept location permissions to use this app.</string>
    <string name="dialog_title_gps">GPS is not activated</string>
    <string name="dialog_message_gps">To continue, activate the GPS.</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">No, thank you</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_my_lunch">My Lunch</string>
    <string name="toolbar_title_detail">Restaurant Info</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_map">Map</string>
    <string name="pref_category_about">About</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_zoom">Zoom</string>
    <string name="pref_title_radius">Radius</string>
    <string name="pref_title_version">App Version</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="pref_title_notif">Notification</string>
    <string name="pref_summary_notif">Activate restaurant reminder</string>
    <string name="pref_title_developer">Developer</string>
    <string name="pref_dev_sum" translatable="false">Nicolas Vantsis</string>
    <string name="workmate_where_eating" >%1$s will eat at %2$s</string>
    <string name="workmate_not_decided" >%1$s hasn\'t decided yet</string>
    <string name="pref_dialog_language_title">Restart the application for the change to take effect.</string>
    <string name="open_now">Open now</string>
    <string name="closed">Closed</string>
    <string name="not_specified">Not specified</string>
    <string name="alert_details_no_phone_number">This restaurant doesn\'t have phone number.</string>
    <string name="alert_details_no_website">This restaurant doesn\'t have website.</string>
    <string name="tv_my_lunch_message">You didn\'t choose any restaurant yet!</string>
    <string name="toast_workmate_not_decided">%1$s is not decided yet!</string>
    <string name="toolbar_menu_sort_by_name">Sort by name</string>
    <string name="toolbar_menu_sort_by_distance">Sort by distance</string>
    <string name="toolbar_menu_sort_by_rating">Sort by rating</string>
    <string name="toolbar_menu_sort_by_workmates">Sort by workmates</string>
    <string name="tv_toolbar_hint">Search restaurant...</string>
    <string name="notification_title">Your choice for lunch today:</string>
    <string name="notification_channel_title">Daily restaurant selection</string>
    <string name="notification_channel_description">Receive a notification at 12:00 noon with the choice of your restaurant.</string>
    <string name="select_for_lunch">Select for lunch</string>

    <string-array name="pref_languages_entries">
        <item>@string/french</item>
        <item>@string/english</item>
    </string-array>

    <string-array name="pref_languages_values">
        <item>fr</item>
        <item>en</item>
    </string-array>

</resources>